test/tests/stages/8_loops/valid/extra_credit/switch.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CConstant: 
                  CConstInt: 
                    TInt: 3
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 5
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 5
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
