test/tests/stages/8_loops/invalid_semantics/break_not_in_loop.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CIf: 
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
                CBreak: 
                  TIdentifier: (null)
                None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
